// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expressions > function expressions > function 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "scope": Scope {
          "names": {},
          "scope": [],
        },
      },
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {
        "relativeIndex": 0,
        "scope": Scope {
          "names": {
            "x": 0,
          },
          "scope": [
            {
              "name": "x",
              "value": {},
            },
          ],
        },
      },
      "name": "name",
      "value": "x",
    },
  ],
  "data": {
    "scope": Scope {
      "names": {},
      "scope": [],
    },
  },
  "name": "operator",
  "value": "->",
}
`;

exports[`expressions > function expressions > function multiple params 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "scope": Scope {
              "names": {},
              "scope": [],
            },
          },
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {
            "scope": Scope {
              "names": {
                "x": 0,
              },
              "scope": [
                {
                  "name": "x",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "y",
        },
      ],
      "data": {
        "scope": Scope {
          "names": {},
          "scope": [],
        },
      },
      "name": "operator",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [],
          "data": {
            "relativeIndex": 1,
            "scope": Scope {
              "names": {
                "x": 0,
                "y": 1,
              },
              "scope": [
                {
                  "name": "x",
                  "value": {},
                },
                {
                  "name": "y",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {
            "relativeIndex": 0,
            "scope": Scope {
              "names": {
                "x": 0,
                "y": 1,
              },
              "scope": [
                {
                  "name": "x",
                  "value": {},
                },
                {
                  "name": "y",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "y",
        },
      ],
      "data": {
        "scope": Scope {
          "names": {
            "x": 0,
            "y": 1,
          },
          "scope": [
            {
              "name": "x",
              "value": {},
            },
            {
              "name": "y",
              "value": {},
            },
          ],
        },
      },
      "name": "operator",
      "value": "application",
    },
  ],
  "data": {
    "scope": Scope {
      "names": {},
      "scope": [],
    },
  },
  "name": "operator",
  "value": "fn",
}
`;

exports[`expressions > function expressions > function with deep shadowed name access 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "scope": Scope {
          "names": {},
          "scope": [],
        },
      },
      "name": "name",
      "value": "a",
    },
    {
      "children": [
        {
          "children": [],
          "data": {
            "scope": Scope {
              "names": {
                "a": 0,
              },
              "scope": [
                {
                  "name": "a",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "a",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "scope": Scope {
                  "names": {
                    "a": 1,
                  },
                  "scope": [
                    {
                      "name": "a",
                      "value": {},
                    },
                    {
                      "name": "a",
                      "value": {},
                    },
                  ],
                },
              },
              "name": "name",
              "value": "a",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "relativeIndex": 0,
                        "scope": Scope {
                          "names": {
                            "a": 2,
                          },
                          "scope": [
                            {
                              "name": "a",
                              "value": {},
                            },
                            {
                              "name": "a",
                              "value": {},
                            },
                            {
                              "name": "a",
                              "value": {},
                            },
                          ],
                        },
                      },
                      "name": "name",
                      "value": "a",
                    },
                  ],
                  "data": {
                    "relativeIndex": 1,
                    "scope": Scope {
                      "names": {
                        "a": 2,
                      },
                      "scope": [
                        {
                          "name": "a",
                          "value": {},
                        },
                        {
                          "name": "a",
                          "value": {},
                        },
                        {
                          "name": "a",
                          "value": {},
                        },
                      ],
                    },
                  },
                  "name": "operator",
                  "value": "#",
                },
              ],
              "data": {
                "relativeIndex": 2,
                "scope": Scope {
                  "names": {
                    "a": 2,
                  },
                  "scope": [
                    {
                      "name": "a",
                      "value": {},
                    },
                    {
                      "name": "a",
                      "value": {},
                    },
                    {
                      "name": "a",
                      "value": {},
                    },
                  ],
                },
              },
              "name": "operator",
              "value": "#",
            },
          ],
          "data": {
            "scope": Scope {
              "names": {
                "a": 1,
              },
              "scope": [
                {
                  "name": "a",
                  "value": {},
                },
                {
                  "name": "a",
                  "value": {},
                },
              ],
            },
          },
          "name": "operator",
          "value": "fn",
        },
      ],
      "data": {
        "scope": Scope {
          "names": {
            "a": 0,
          },
          "scope": [
            {
              "name": "a",
              "value": {},
            },
          ],
        },
      },
      "name": "operator",
      "value": "fn",
    },
  ],
  "data": {
    "scope": Scope {
      "names": {},
      "scope": [],
    },
  },
  "name": "operator",
  "value": "fn",
}
`;

exports[`expressions > function expressions > function with name shadowing 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "scope": Scope {
          "names": {},
          "scope": [],
        },
      },
      "name": "name",
      "value": "a",
    },
    {
      "children": [
        {
          "children": [],
          "data": {
            "scope": Scope {
              "names": {
                "a": 0,
              },
              "scope": [
                {
                  "name": "a",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "a",
        },
        {
          "children": [],
          "data": {
            "relativeIndex": 0,
            "scope": Scope {
              "names": {
                "a": 1,
              },
              "scope": [
                {
                  "name": "a",
                  "value": {},
                },
                {
                  "name": "a",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "a",
        },
      ],
      "data": {
        "scope": Scope {
          "names": {
            "a": 0,
          },
          "scope": [
            {
              "name": "a",
              "value": {},
            },
          ],
        },
      },
      "name": "operator",
      "value": "fn",
    },
  ],
  "data": {
    "scope": Scope {
      "names": {},
      "scope": [],
    },
  },
  "name": "operator",
  "value": "fn",
}
`;

exports[`expressions > function expressions > function with no arg 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "scope": Scope {
          "names": {},
          "scope": [],
        },
      },
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "int",
          "value": 0,
        },
      ],
      "data": {
        "relativeIndex": 0,
        "scope": Scope {
          "names": {},
          "scope": [
            {
              "value": {},
            },
          ],
        },
      },
      "name": "operator",
      "value": "#",
    },
  ],
  "data": {
    "scope": Scope {
      "names": {},
      "scope": [],
    },
  },
  "name": "operator",
  "value": "fn",
}
`;

exports[`expressions > function expressions > function with placeholder arg 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "scope": Scope {
          "names": {},
          "scope": [],
        },
      },
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "int",
          "value": 0,
        },
      ],
      "data": {
        "relativeIndex": 0,
        "scope": Scope {
          "names": {},
          "scope": [
            {
              "value": {},
            },
          ],
        },
      },
      "name": "operator",
      "value": "#",
    },
  ],
  "data": {
    "scope": Scope {
      "names": {},
      "scope": [],
    },
  },
  "name": "operator",
  "value": "->",
}
`;

exports[`expressions > function expressions > function with shadowed name access 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "scope": Scope {
          "names": {},
          "scope": [],
        },
      },
      "name": "name",
      "value": "a",
    },
    {
      "children": [
        {
          "children": [],
          "data": {
            "scope": Scope {
              "names": {
                "a": 0,
              },
              "scope": [
                {
                  "name": "a",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "a",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "relativeIndex": 0,
                "scope": Scope {
                  "names": {
                    "a": 1,
                  },
                  "scope": [
                    {
                      "name": "a",
                      "value": {},
                    },
                    {
                      "name": "a",
                      "value": {},
                    },
                  ],
                },
              },
              "name": "name",
              "value": "a",
            },
          ],
          "data": {
            "relativeIndex": 1,
            "scope": Scope {
              "names": {
                "a": 1,
              },
              "scope": [
                {
                  "name": "a",
                  "value": {},
                },
                {
                  "name": "a",
                  "value": {},
                },
              ],
            },
          },
          "name": "operator",
          "value": "#",
        },
      ],
      "data": {
        "scope": Scope {
          "names": {
            "a": 0,
          },
          "scope": [
            {
              "name": "a",
              "value": {},
            },
          ],
        },
      },
      "name": "operator",
      "value": "fn",
    },
  ],
  "data": {
    "scope": Scope {
      "names": {},
      "scope": [],
    },
  },
  "name": "operator",
  "value": "fn",
}
`;

exports[`expressions > pattern matching > in function parameters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {
                "scope": Scope {
                  "names": {},
                  "scope": [],
                },
              },
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {
                "scope": Scope {
                  "names": {
                    "x": 0,
                  },
                  "scope": [
                    {
                      "name": "x",
                      "value": {},
                    },
                  ],
                },
              },
              "name": "name",
              "value": "y",
            },
          ],
          "data": {
            "scope": Scope {
              "names": {},
              "scope": [],
            },
          },
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {
        "scope": Scope {
          "names": {},
          "scope": [],
        },
      },
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [],
          "data": {
            "relativeIndex": 1,
            "scope": Scope {
              "names": {
                "x": 0,
                "y": 1,
              },
              "scope": [
                {
                  "name": "x",
                  "value": {},
                },
                {
                  "name": "y",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {
            "relativeIndex": 0,
            "scope": Scope {
              "names": {
                "x": 0,
                "y": 1,
              },
              "scope": [
                {
                  "name": "x",
                  "value": {},
                },
                {
                  "name": "y",
                  "value": {},
                },
              ],
            },
          },
          "name": "name",
          "value": "y",
        },
      ],
      "data": {
        "scope": Scope {
          "names": {
            "x": 0,
            "y": 1,
          },
          "scope": [
            {
              "name": "x",
              "value": {},
            },
            {
              "name": "y",
              "value": {},
            },
          ],
        },
      },
      "name": "operator",
      "value": "+",
    },
  ],
  "data": {
    "scope": Scope {
      "names": {},
      "scope": [],
    },
  },
  "name": "operator",
  "value": "->",
}
`;
